[gd_scene load_steps=44 format=2]

[ext_resource path="res://Maps/ChaosInTheCity/Sprites/EnemyPunk/idle.png" type="Texture" id=1]
[ext_resource path="res://Maps/ChaosInTheCity/Sprites/EnemyPunk/attack.png" type="Texture" id=2]
[ext_resource path="res://Maps/ChaosInTheCity/Sprites/EnemyPunk/hurt.png" type="Texture" id=3]
[ext_resource path="res://Maps/ChaosInTheCity/Sprites/EnemyPunk/walk.png" type="Texture" id=4]
[ext_resource path="res://Maps/ChaosInTheCity/EnemyPunk.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 24.5, 3.5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 96, 63 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 96, 63 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "Hurt",
"speed": 4.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "Hurt"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=30]
states/Attack/node = SubResource( 23 )
states/Attack/position = Vector2( 385, 111 )
states/Hurt/node = SubResource( 32 )
states/Hurt/position = Vector2( 258, 378 )
states/Idle/node = SubResource( 24 )
states/Idle/position = Vector2( 505, 257 )
states/Walk/node = SubResource( 25 )
states/Walk/position = Vector2( 692, 257 )
transitions = [ "Idle", "Attack", SubResource( 26 ), "Attack", "Idle", SubResource( 27 ), "Idle", "Walk", SubResource( 28 ), "Walk", "Idle", SubResource( 29 ), "Idle", "Hurt", SubResource( 33 ), "Hurt", "Idle", SubResource( 34 ), "Walk", "Attack", SubResource( 35 ), "Attack", "Walk", SubResource( 36 ), "Walk", "Hurt", SubResource( 37 ), "Attack", "Hurt", SubResource( 38 ), "Hurt", "Attack", SubResource( 39 ) ]
start_node = "Idle"
graph_offset = Vector2( 0, 88.8 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=31]

[sub_resource type="Animation" id=19]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack" ]
}

[sub_resource type="Animation" id=20]
resource_name = "Hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Hurt" ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "is_not_hit"
} ]
}

[sub_resource type="Animation" id=21]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}

[sub_resource type="Animation" id=22]
resource_name = "Walk"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walk" ]
}

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 28.5, 18.5 )

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 138.5, 38.5 )

[node name="EnemyPunk" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 9
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.5, 42.5 )
shape = SubResource( 17 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
animation = "Idle"
frame = 1
playing = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 30 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 31 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Attack = SubResource( 19 )
anims/Hurt = SubResource( 20 )
anims/Idle = SubResource( 21 )
anims/Walk = SubResource( 22 )

[node name="Timer" type="Timer" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 6.5, 5.5 )
shape = SubResource( 18 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( -9, 7 )
shape = SubResource( 40 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="area_entered" from="DetectionArea" to="." method="_on_DetectionArea_area_entered"]
